sandbox/output
TicketDispenserTest.java:52: error: cannot find symbol
        assertEquals(11, ticket.getTurnNumber());
                         ^
  symbol:   variable ticket
  location: class TicketDispenserTest
1 error
